[REFACTOR] Refactor notification and wishlist model to connect to database